<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WSBiking</string>
    <string name="action_settings">Settings</string>
    <string name="action_routes">Routes</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>

    <integer name="time_interval">0</integer>
    <integer name="min_distance">0</integer>

    <string name="title_activity_save_route">SaveRoute</string>
    <string name="route_details">Route Details</string>
    <string name="route_details_hint">Closes after 10 seconds of inactivity</string>
    <string name="route_title_text">Title</string>
    <string name="route_title_hint">Enter a route title</string>
    <string name="mark_important">*</string>
    <string name="route_title_description_text">Description</string>
    <string name="button_discard_route">Discard</string>
    <string name="button_save_route">Save</string>
    <string name="title_activity_store_route">StoreRoute</string>
    <string name="title_activity_route_save">RouteSave</string>
    <string name="title_GPSdisabled">Attention!</string>
    <string name="message_GPSdisabled">Sorry, location cannot be determined. Please enable GPS</string>
    <string name="message_single_route_point">Need more than one point to save route</string>
    <string name="title_activity_view_routes">ViewRoutes</string>
    <string name="heading_speed">Average Speed: </string>
    <string name="heading_distance">Distance Travelled: </string>
    <string name="heading_starttime">Start time: </string>
    <string name="heading_endtime">End time: </string>
    <string name="show_on_map_image">Click to show on map </string>
    <string name="title_activity_show_route">ShowRoute</string>
    <string name="title_activity_view_route">ViewRoute</string>
    <string name="drawer_handle_desc">Drawer Handle</string>
    <string name="no_routes">No Routes Recorded</string>
    <string name="no_data_image_desc">No Data available</string>
    <string name="my_location">My Location</string>
    <string name="app_id">497834950264732</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_normal_login">NormalLogin</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="login">Facebook Login</string>
    <string name="logout">Logout from Facebook</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="nlogin">Login</string>
    <string name="nlogout">Log Out</string>
    <string name="weather">Weather</string>
    <string name="title_activity_heatmap">Heatmap</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>