<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RouteSave" >

    <TextView
        android:id="@+id/txtVwHeading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_details"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtVwDialogInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/route_details_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/txtVwTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/route_title_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtTxTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/route_title_hint"
        android:maxLength="30"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="horizontal" >
    </EditText>

    <TextView
        android:id="@+id/txtVwDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/route_title_description_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtTxtDesc"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:maxLength="400"
        android:scrollbarStyle="insideOverlay" />
    
    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_dialog_close" 
        android:onClick="closeDialog"/>    

</LinearLayout>