<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/listItemRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp" 
    android:background="@drawable/show_on_map"
    android:onClick="showRouteOnMap" >

    <LinearLayout
        android:id="@+id/listItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtVwRouteTitle"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:text="@string/route_title_text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/imgBtnShowMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/showonmap"
            android:contentDescription="@string/show_on_map_image"/>
        
    </LinearLayout>

    <TextView
        android:id="@+id/TxtVwRouteDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listItemTitle"
        android:layout_below="@+id/listItemTitle"
        android:text="@string/route_title_description_text" />

    <TextView
        android:id="@+id/txtVwRouteIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/listItemTitle"
        android:layout_alignBottom="@+id/listItemTitle"
        android:layout_toRightOf="@+id/listItemTitle"
        android:visibility="invisible" />
       
</RelativeLayout>