<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewRoute" >

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <SlidingDrawer
        android:id="@+id/SlidingDrawer"
        android:layout_width="wrap_content"
        android:layout_height="170dip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:content="@+id/contentLayout"
        android:handle="@+id/slideButton"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/slideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_handle"
            android:contentDescription="@string/drawer_handle_desc" >
        </ImageButton>

        <RelativeLayout
            android:id="@+id/contentLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/top_curved_dark_bg"
            android:paddingLeft="35dip"
            android:paddingRight="35dip"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/txtVwHdSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heading_speed"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:width="140dp" />

            <TextView
                android:id="@+id/txtVwRouteSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/txtVwHdSpeed"
                android:layout_toRightOf="@+id/txtVwHdSpeed"
                android:paddingLeft="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtVwHdDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtVwHdSpeed"
                android:layout_marginTop="10dp"
                android:text="@string/heading_distance"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:width="140dp" />

            <TextView
                android:id="@+id/txtVwRouteDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/txtVwHdDistance"
                android:layout_toRightOf="@+id/txtVwHdDistance"
                android:paddingLeft="5dp"
                android:text=""
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtVwHdStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtVwHdDistance"
                android:layout_marginTop="10dp"
                android:text="@string/heading_starttime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:width="80dp" />

            <TextView
                android:id="@+id/txtVwStartDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/txtVwHdStart"
                android:layout_toRightOf="@+id/txtVwHdStart"
                android:paddingLeft="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtVwHdEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/txtVwHdStart"
                android:layout_marginTop="10dp"
                android:text="@string/heading_endtime"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:width="80dp" />

            <TextView
                android:id="@+id/txtVwEndDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/txtVwHdEnd"
                android:layout_toRightOf="@+id/txtVwHdEnd"
                android:paddingLeft="5dp"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </RelativeLayout>
    </SlidingDrawer>

</RelativeLayout>