<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordActivity" >

    <fragment
        android:id="@+id/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        class="com.google.android.gms.maps.SupportMapFragment" />

    <ImageView
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/start_recording"
        android:onClick="startRecording"
        android:src="@drawable/start_button" />

    <ImageView
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/stop_recording"
        android:onClick="stopRecording"
        android:src="@drawable/stop_button"
        android:visibility="invisible" />

    <Chronometer
        android:id="@+id/tripTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/curved_dark_bg"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tripDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/curved_dark_bg"
        android:padding="5dp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/imgVwMyLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_loc_bg"
        android:contentDescription="@string/my_location"
        android:onClick="plotMyLocation"
        android:src="@drawable/pointmylocation" />

    <TextView
        android:id="@+id/textViewWeatherInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/bottom_curved_dark_bg"
        android:padding="10dp"
        android:text="Loading.."
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/LoggedUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" />

</RelativeLayout>